pytigergraph/1.6/core-functions/vertex.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex)[Next](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  *     * [Overview](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  *     * [Getting Started](https://docs.tigergraph.com/pytigergraph/1.6/getting-started/)
      * [Installing pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.6/getting-started/install)
      * [Connecting to TigerGraph](https://docs.tigergraph.com/pytigergraph/1.6/getting-started/connection)
      * [pyTigerGraph 101](https://docs.tigergraph.com/pytigergraph/1.6/getting-started/101)
  *     * [Core Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/)
      * [TigerGraphConnection](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/base)
      * [Authentication Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth)
      * [Vertex Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex)
      * [Edge Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/edge)
      * [Query Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/query)
      * [UDT Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/udt)
      * [GSQL Interface](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/gsql)
      * [Loading Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/loading)
      * [Path Finding Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/path)
      * [Schema Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/schema)
      * [Utility Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/utils)
  *     * [GDS Functions](https://docs.tigergraph.com/pytigergraph/1.6/gds/)
      * [Factory Functions](https://docs.tigergraph.com/pytigergraph/1.6/gds/gds)
      * [Data Loaders](https://docs.tigergraph.com/pytigergraph/1.6/gds/dataloaders)
      * [Featurizer](https://docs.tigergraph.com/pytigergraph/1.6/gds/featurizer)
      * [Metrics](https://docs.tigergraph.com/pytigergraph/1.6/gds/metrics)
      * [Splitters](https://docs.tigergraph.com/pytigergraph/1.6/gds/splitters)
      * [Transforms](https://docs.tigergraph.com/pytigergraph/1.6/gds/transforms)
        * [PyTorch Geometric Transforms](https://docs.tigergraph.com/pytigergraph/1.6/gds/pyg_transforms)
        * [NodePiece Transforms](https://docs.tigergraph.com/pytigergraph/1.6/gds/nodepiece_transforms)
      * [Trainer](https://docs.tigergraph.com/pytigergraph/1.6/gds/trainer)
      * [Models](https://docs.tigergraph.com/pytigergraph/1.6/gds/models)
        * [GraphSAGE](https://docs.tigergraph.com/pytigergraph/1.6/gds/graphsage)
        * [NodePiece](https://docs.tigergraph.com/pytigergraph/1.6/gds/nodepiece)
  *     * [TigerGraph CoPilot](https://docs.tigergraph.com/pytigergraph/1.6/ai/copilot)
  *     * [Datasets](https://docs.tigergraph.com/pytigergraph/1.6/datasets/datasets)
      * [Dataset Object](https://docs.tigergraph.com/pytigergraph/1.6/datasets/datasets_object)
  *     * [Visualization](https://docs.tigergraph.com/pytigergraph/1.6/visualization/visualization)
  *     * [Object Oriented Schema](https://docs.tigergraph.com/pytigergraph/1.6/object_oriented_schema/schema-def)
  *     * [Contributing](https://docs.tigergraph.com/pytigergraph/1.6/contributing/)
  *     * [Release Notes](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/)
      * [Legacy Version Documentation](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/legacy-tg-versions)


pyTigerGraph 1.6
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [pyTigerGraph 1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [Core Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/)
  * [Vertex Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex)


[Edit this Page](https://github.com/tigergraph/pytigergraph-docs/edit/v1.6/modules/core-functions/pages/vertex.adoc)
### Contents
  * [getVertexTypes()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertextypes)
  * [getVertexAttrs()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexattrs)
  * [getVertexType()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertextype)
  * [getVertexCount()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexcount)
  * [upsertVertex()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_upsertvertex)
  * [upsertVertices()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_upsertvertices)
  * [upsertVertexDataFrame()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_upsertvertexdataframe)
  * [getVertices()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertices)
  * [getVertexDataFrame()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexdataframe)
  * [getVertexDataframe()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexdataframe_2)
  * [getVerticesById()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getverticesbyid)
  * [getVertexDataFrameById()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexdataframebyid)
  * [getVertexDataframeById()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexdataframebyid_2)
  * [getVertexStats()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexstats)
  * [delVertices()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_delvertices)
  * [delVerticesById()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_delverticesbyid)
  * [vertexSetToDataFrame()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_vertexsettodataframe)


# Vertex Functions
### Contents
  * [getVertexTypes()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertextypes)
  * [getVertexAttrs()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexattrs)
  * [getVertexType()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertextype)
  * [getVertexCount()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexcount)
  * [upsertVertex()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_upsertvertex)
  * [upsertVertices()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_upsertvertices)
  * [upsertVertexDataFrame()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_upsertvertexdataframe)
  * [getVertices()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertices)
  * [getVertexDataFrame()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexdataframe)
  * [getVertexDataframe()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexdataframe_2)
  * [getVerticesById()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getverticesbyid)
  * [getVertexDataFrameById()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexdataframebyid)
  * [getVertexDataframeById()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexdataframebyid_2)
  * [getVertexStats()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexstats)
  * [delVertices()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_delvertices)
  * [delVerticesById()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_delverticesbyid)
  * [vertexSetToDataFrame()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_vertexsettodataframe)


Functions to upsert, retrieve and delete vertices.
All functions in this module are called as methods on a [`TigerGraphConnection` object](https://docs.tigergraph.com/pytigergraph/current/core-functions/base).
## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertextypes)getVertexTypes()
`getVertexTypes(force: bool = False) → list`
Returns the list of vertex type names of the graph.
#### Parameter:
  * `force`: If `True`, forces the retrieval the schema metadata again, otherwise returns a cached copy of vertex type metadata (if they were already fetched previously).


#### Returns:
The list of vertex types defined in the current graph.
## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexattrs)getVertexAttrs()
`getVertexAttrs(vertexType: str) → list`
Returns the names and types of the attributes of the vertex type.
#### Parameter:
  * `vertexType`: The name of the vertex type.


#### Returns:
A list of (attribute_name, attribute_type) tuples. The format of attribute_type is one of - "scalar_type" - "complex_type(scalar_type)" - "map_type(key_type,value_type)" and it is a string.
## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertextype)getVertexType()
`getVertexType(vertexType: str, force: bool = False) → dict`
Returns the details of the specified vertex type.
#### Parameters:
  * `vertexType`: The name of the vertex type.
  * `force`: If `True`, forces the retrieval the schema metadata again, otherwise returns a cached copy of vertex type details (if they were already fetched previously).


#### Returns:
The metadata of the vertex type.
## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexcount)getVertexCount()
`getVertexCount(vertexType: Union[str, list] = "*", where: str = "", realtime: bool = False) → Union[int, dict]`
Returns the number of vertices of the specified type.
#### Parameters:
  * `vertexType (Union[str, list], optional)`: The name of the vertex type. If `vertexType` == "*", then count the instances of all vertex types (`where` cannot be specified in this case). Defaults to "*".
  * `where (str, optional)`: A comma separated list of conditions that are all applied on each vertex’s attributes. The conditions are in logical conjunction (i.e. they are "AND’ed" together). Defaults to "".
  * `realtime (bool, optional)`: Whether to get the most up-to-date number by force. When there are frequent updates happening, a slightly outdated number (up to 30 seconds delay) might be fetched. Set `realtime=True` to force the system to recount the vertices, which will get a more up-to-date result but will also take more time. This parameter only works with TigerGraph DB 3.6 and above. Defaults to False.


#### Returns:
  * A dictionary of <vertex_type>: <vertex_count> pairs if `vertexType` is a list or "*".
  * An integer of vertex count if `vertexType` is a single vertex type.


#### Uses:
  * If `vertexType` is specified only: count of the instances of the given vertex type(s).
  * If `vertexType` and `where` are specified: count of the instances of the given vertex type after being filtered by `where` condition(s).


#### Raises:
`TigerGraphException` when "*" is specified as vertex type and a `where` condition is provided; or when invalid vertex type name is specified.
#### Endpoints:
  * `GET /graph/{graph_name}/vertices` See [List vertices](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_list_vertices)
  * `POST /builtins` See [Run built-in functions](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_run_built_in_functions_on_graph)


## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_upsertvertex)upsertVertex()
`upsertVertex(vertexType: str, vertexId: str, attributes: dict = None) → int`
Upserts a vertex.
Data is upserted:
  * If vertex is not yet present in graph, it will be created.
  * If it’s already in the graph, its attributes are updated with the values specified in the request. An optional operator controls how the attributes are updated.


#### Parameters:
  * `vertexType`: The name of the vertex type.
  * `vertexId`: The primary ID of the vertex to be upserted.
  * `attributes`: The attributes of the vertex to be upserted; a dictionary in this format:
```
{<attribute_name>: <attribute_value>|(<attribute_name>, <operator>), …}
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Example:
```
{"name": "Thorin", points: (10, "+"), "bestScore": (67, "max")}
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```



For valid values of `<operator>` see [Operation codes](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_operation_codes).
#### Returns:
A single number of accepted (successfully upserted) vertices (0 or 1).
#### Endpoint:
  * `POST /graph/{graph_name}` See [Upsert data to graph](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_upsert_data_to_graph)


## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_upsertvertices)upsertVertices()
`upsertVertices(vertexType: str, vertices: list) → int`
Upserts multiple vertices (of the same type).
See the description of `upsertVertex` for generic information.
#### Parameters:
  * `vertexType`: The name of the vertex type.
  * `vertices`: A list of tuples in this format:


```
[
(<vertex_id>, {<attribute_name>: <attribute_value>, …}),
(<vertex_id>, {<attribute_name>: (<attribute_value>, <operator>), …}),
⋮
]
json![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

+ Example:
```
[
(2, {"name": "Balin", "points": (10, "+"), "bestScore": (67, "max")}),
(3, {"name": "Dwalin", "points": (7, "+"), "bestScore": (35, "max")})
]
json![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

For valid values of `<operator>` see [Operation codes](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_operation_codes).
#### Returns:
A single number of accepted (successfully upserted) vertices (0 or positive integer).
#### Endpoint:
  * `POST /graph/{graph_name}` See [Upsert data to graph](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_upsert_data_to_graph)


## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_upsertvertexdataframe)upsertVertexDataFrame()
`upsertVertexDataFrame(df: pd.DataFrame, vertexType: str, v_id: bool = None, attributes: dict = None) → int`
Upserts vertices from a Pandas DataFrame.
#### Parameters:
  * `df`: The DataFrame to upsert.
  * `vertexType`: The type of vertex to upsert data to.
  * `v_id`: The field name where the vertex primary id is given. If omitted the dataframe index would be used instead.
  * `attributes`: A dictionary in the form of `{target: source}` where source is the column name in the dataframe and target is the attribute name in the graph vertex. When omitted, all columns would be upserted with their current names. In this case column names must match the vertex’s attribute names.


#### Returns:
The number of vertices upserted.
## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertices)getVertices()
`getVertices(vertexType: str, select: str = "", where: str = "", limit: Union[int, str] = None, sort: str = "", fmt: str = "py", withId: bool = True, withType: bool = False, timeout: int = 0) → Union[dict, str, pd.DataFrame]`
Retrieves vertices of the given vertex type.
**Note** : The primary ID of a vertex instance is NOT an attribute, thus cannot be used in `select`, `where` or `sort` parameters (unless the `WITH primary_id_as_attribute` clause was used when the vertex type was created). Use `getVerticesById()` if you need to retrieve vertices by their primary ID.
#### Parameters:
  * `vertexType`: The name of the vertex type.
  * `select`: Comma separated list of vertex attributes to be retrieved.
  * `where`: Comma separated list of conditions that are all applied on each vertex' attributes. The conditions are in logical conjunction (i.e. they are "AND’ed" together).
  * `sort`: Comma separated list of attributes the results should be sorted by. Must be used with `limit`.
  * `limit`: Maximum number of vertex instances to be returned (after sorting). Must be used with `sort`.
  * `fmt`: Format of the results:
    * "py": Python objects
    * "json": JSON document
    * "df": pandas DataFrame
  * `withId`: (When the output format is "df") should the vertex ID be included in the dataframe?
  * `withType`: (When the output format is "df") should the vertex type be included in the dataframe?
  * `timeout`: Time allowed for successful execution (0 = no limit, default).


#### Returns:
The (selected) details of the (matching) vertex instances (sorted, limited) as dictionary, JSON or pandas DataFrame.
#### Endpoint:
  * `GET /graph/{graph_name}/vertices/{vertex_type}` See [List vertices](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_list_vertices)


## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexdataframe)getVertexDataFrame()
`getVertexDataFrame(vertexType: str, select: str = "", where: str = "", limit: Union[int, str] = None, sort: str = "", timeout: int = 0) → pd.DataFrame`
Retrieves vertices of the given vertex type and returns them as pandas DataFrame.
This is a shortcut to `getVertices(…​, fmt="df", withId=True, withType=False)`.
**Note** : The primary ID of a vertex instance is NOT an attribute, thus cannot be used in `select`, `where` or `sort` parameters (unless the `WITH primary_id_as_attribute` clause was used when the vertex type was created). Use `getVerticesById()` if you need to retrieve vertices by their primary ID.
#### Parameters:
  * `vertexType`: The name of the vertex type.
  * `select`: Comma separated list of vertex attributes to be retrieved.
  * `where`: Comma separated list of conditions that are all applied on each vertex' attributes. The conditions are in logical conjunction (i.e. they are "AND’ed" together).
  * `sort`: Comma separated list of attributes the results should be sorted by. Must be used with 'limit'.
  * `limit`: Maximum number of vertex instances to be returned (after sorting). Must be used with `sort`.
  * `timeout`: Time allowed for successful execution (0 = no limit, default).


#### Returns:
The (selected) details of the (matching) vertex instances (sorted, limited) as pandas DataFrame.
## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexdataframe_2)getVertexDataframe()
`getVertexDataframe(vertexType: str, select: str = "", where: str = "", limit: Union[int, str] = None, sort: str = "", timeout: int = 0) → pd.DataFrame`
DEPRECATED
Use `getVertexDataFrame()` instead.
## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getverticesbyid)getVerticesById()
`getVerticesById(vertexType: str, vertexIds: Union[int, str, list], select: str = "", fmt: str = "py", withId: bool = True, withType: bool = False, timeout: int = 0) → Union[list, str, pd.DataFrame]`
Retrieves vertices of the given vertex type, identified by their ID.
#### Parameters:
  * `vertexType`: The name of the vertex type.
  * `vertexIds`: A single vertex ID or a list of vertex IDs.
  * `select`: Comma separated list of vertex attributes to be retrieved.
  * `fmt`: Format of the results: "py": Python objects (in a list) "json": JSON document "df": pandas DataFrame
  * `withId`: (If the output format is "df") should the vertex ID be included in the dataframe?
  * `withType`: (If the output format is "df") should the vertex type be included in the dataframe?
  * `timeout`: Time allowed for successful execution (0 = no limit, default).


#### Returns:
The (selected) details of the (matching) vertex instances as dictionary, JSON or pandas DataFrame.
#### Endpoint:
  * `GET /graph/{graph_name}/vertices/{vertex_type}/{vertex_id}` See [Retrieve a vertex](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_retrieve_a_vertex)


## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexdataframebyid)getVertexDataFrameById()
`getVertexDataFrameById(vertexType: str, vertexIds: Union[int, str, list], select: str = "") → pd.DataFrame`
Retrieves vertices of the given vertex type, identified by their ID.
This is a shortcut to `getVerticesById(…​, fmt="df", withId=True, withType=False)`.
#### Parameters:
  * `vertexType`: The name of the vertex type.
  * `vertexIds`: A single vertex ID or a list of vertex IDs.
  * `select`: Comma separated list of vertex attributes to be retrieved.


#### Returns:
The (selected) details of the (matching) vertex instances as pandas DataFrame.
## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexdataframebyid_2)getVertexDataframeById()
`getVertexDataframeById(vertexType: str, vertexIds: Union[int, str, list], select: str = "") → pd.DataFrame`
DEPRECATED
Use `getVertexDataFrameById()` instead.
## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_getvertexstats)getVertexStats()
`getVertexStats(vertexTypes: Union[str, list], skipNA: bool = False) → dict`
Returns vertex attribute statistics.
#### Parameters:
  * `vertexTypes`: A single vertex type name or a list of vertex types names or "*" for all vertex types.
  * `skipNA`: Skip those non-applicable vertices that do not have attributes or none of their attributes have statistics gathered.


#### Returns:
A dictionary of various vertex stats for each vertex type specified.
#### Endpoint:
  * `POST /builtins/{graph_name}` See [Run built-in functions](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_run_built_in_functions_on_graph)


## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_delvertices)delVertices()
`delVertices(vertexType: str, where: str = "", limit: str = "", sort: str = "", permanent: bool = False, timeout: int = 0) → int`
Deletes vertices from graph.
**Note** : The primary ID of a vertex instance is not an attribute. A primary ID cannot be used in `select`, `where` or `sort` parameters (unless the `WITH primary_id_as_attribute` clause was used when the vertex type was created). Use `delVerticesById()` if you need to retrieve vertices by their primary ID.
#### Parameters:
  * `vertexType`: The name of the vertex type.
  * `where`: Comma separated list of conditions that are all applied on each vertex' attributes. The conditions are in logical conjunction (i.e. they are "AND’ed" together).
  * `sort`: Comma separated list of attributes the results should be sorted by. Must be used with `limit`.
  * `limit`: Maximum number of vertex instances to be returned (after sorting). Must be used with `sort`.
  * `permanent`: If true, the deleted vertex IDs can never be inserted back, unless the graph is dropped or the graph store is cleared. timeout: Time allowed for successful execution (0 = no limit, default).


#### Returns:
A single number of vertices deleted.
The primary ID of a vertex instance is NOT an attribute, thus cannot be used in above arguments.
#### Endpoint:
  * `DELETE /graph/{graph_name}/vertices/{vertex_type}` See [Delete vertices](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_delete_vertices)


## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_delverticesbyid)delVerticesById()
`delVerticesById(vertexType: str, vertexIds: Union[int, str, list], permanent: bool = False, timeout: int = 0) → int`
Deletes vertices from graph identified by their ID.
#### Parameters:
  * `vertexType`: The name of the vertex type.
  * `vertexIds`: A single vertex ID or a list of vertex IDs.
  * `permanent`: If true, the deleted vertex IDs can never be inserted back, unless the graph is dropped or the graph store is cleared.
  * `timeout`: Time allowed for successful execution (0 = no limit, default).


#### Returns:
A single number of vertices deleted.
#### Endpoint:
  * `DELETE /graph/{graph_name}/vertices/{vertex_type}/{vertex_id}` See [Delete a vertex](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_delete_a_vertex)


## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex#_vertexsettodataframe)vertexSetToDataFrame()
`vertexSetToDataFrame(vertexSet: list, withId: bool = True, withType: bool = False) → pd.DataFrame`
Converts a vertex set to Pandas DataFrame.
Vertex sets are used for both the input and output of `SELECT` statements. They contain instances of vertices of the same type. For each vertex instance, the vertex ID, the vertex type and the (optional) attributes are present under the `v_id`, `v_type` and `attributes` keys, respectively. See an example in `edgeSetToDataFrame()`.
A vertex set has this structure (when serialised as JSON):
```
[
{
"v_id": <vertex_id>,
"v_type": <vertex_type_name>,
"attributes":
{
"attr1": <value1>,
"attr2": <value2>,
⋮
}
},
⋮
]
json![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

For more information on vertex sets see [Vertex set variables](https://docs.tigergraph.com/gsql-ref/4.2/querying/declaration-and-assignment-statements#_vertex_set_variables).
#### Parameters:
  * `vertexSet`: A JSON array containing a vertex set in the format returned by queries (see below).
  * `withId`: Whether to include vertex primary ID as a column.
  * `withType`: Whether to include vertex type info as a column.


#### Returns:
A pandas DataFrame containing the vertex attributes (and optionally the vertex primary ID and type).
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


